--- a/metadata.yaml
+++ b/metadata.yaml
@@ -19,6 +19,8 @@ language: de
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Setma, das türkische Mädchen
 
   Eine Erzählung für Christenkinder'
